--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		position: absolute;
 		right:10px;
 		bottom:100px;
-		background: url(../image/qiu5.png) no-repeat;
+
+		background: url('./image/qiu5.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
 		height: 269px;
@@ -60,7 +61,7 @@
 		left:0px;
 		bottom:0px;
 
-		background: url(./image/qiu6.png) no-repeat;
+		background: url('./image/qiu6.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
 		height: 269px;
