--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<title>打字游戏2</title>
 	<style>
+		*{
+			padding: 0;
+			margin:0;
+		}
 	.box{
 		width:100%;
-		height:650px;
-		border:1px solid #ccc;
+		height:665px;
 		position: relative;
 		overflow: hidden;
 		background: #aabbcc;	
@@ -23,7 +26,7 @@
 		position: absolute;
 		opacity:0.8;
 		font-size: 60px;
-		background: url(./image/qiu55.png) no-repeat -4px -11px;
+		background: url(./image/qiu55.png) no-repeat 3px 20px;
 		background-size: 152px 152px;
 
 	}
@@ -49,7 +52,6 @@
 		position: absolute;
 		right:10px;
 		bottom:100px;
-
 		background: url('./image/qiu5.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
@@ -60,7 +62,6 @@
 		position: absolute;
 		left:0px;
 		bottom:0px;
-
 		background: url('./image/qiu6.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
