--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 	<meta charset="UTF-8">
 	<title>打字游戏2</title>
 	<style>
-		*{
-			padding: 0;
-			margin:0;
-		}
 	.box{
 		width:100%;
-		height:665px;
+		height:650px;
+		border:1px solid #ccc;
 		position: relative;
 		overflow: hidden;
 		background: #aabbcc;	
@@ -26,7 +23,7 @@
 		position: absolute;
 		opacity:0.8;
 		font-size: 60px;
-		background: url(./image/qiu55.png) no-repeat 3px 20px;
+		background: url(./image/qiu55.png) no-repeat -4px -11px;
 		background-size: 152px 152px;
 
 	}
@@ -52,6 +49,7 @@
 		position: absolute;
 		right:10px;
 		bottom:100px;
+
 		background: url('./image/qiu5.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
@@ -62,6 +60,7 @@
 		position: absolute;
 		left:0px;
 		bottom:0px;
+
 		background: url('./image/qiu6.png') no-repeat;
 		background-size: 256px 269px;
 		width: 256px;
