--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <body>
 	<div class='box'></div>
 	<div class="img"></div>
-	<div class='start'>开始游戏</div>
-		<div class="img2"></div>
+	<div class='start'>结束游戏</div>
+	<div class="img2"></div>
 </body>
 <script src="./jquery工程文件/jquery-1.12.0.js"></script>
 <script>
